--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/air7.jpg" alt="Image">
+                    <img class="w-100" src="img/air1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Yummy & Delicious</h4>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/air6.jpg" alt="Image">
+                    <img class="w-100" src="img/air2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Yummy & Delicious</h4>
@@ -445,7 +445,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">The chocolates were beautifully packaged and arrived fresh and delicious. I highly recommend this shop!</h4>
+                            <h4 class="font-weight-light mb-4">The chocolates were beautifully packed, arrived fresh, and tasted delicious. I highly recommend this shop!</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/2.jpg" alt="">
                             <h5 class="font-weight-bold m-0">Haniya</h5>
                             <span>Undergrad Software Engineer</span>
