--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                         <h3 class="font-weight-bold text-secondary mb-0">&hearts;</h3>
                     </div>
                     <h3 class="font-weight-bold text-white mt-3 mb-4">Chocolate</h3>
-                    <p class="text-white mb-4">At Cocoabell's, we go beyond ordinary chocolate. We use only the finest, ethically sourced cocoa beans and craft our chocolates with unwavering passion and creativity. Our unique flavor combinations and hand-painted designs ensure that each piece is a delightful surprise for your senses.</p>
+                    <p class="text-white mb-4">At Cocoabell's, we go beyond ordinary chocolate. We use only the finest, ethically sourced chocolate and craft our chocolates with unwavering passion and creativity. Our unique flavor combinations and hand-painted designs ensure that each piece is a delightful surprise for your senses.</p>
                     <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-secondary mt-2">Order Now</a>
                 </div>
             </div>
@@ -237,7 +237,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                             </div>
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
                                 <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Quality Maintain</h5>
-                                <p>Selecting ethically sourced, high-grade cocoa beans with desirable flavor profiles and consistent characteristics.</p>
+                                <p>Selecting ethically sourced, high-grade chocolate with desirable flavor profiles and consistent characteristics.</p>
                                 <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-secondary mt-2">Shop Now</a>
                             </div>
                         </div>
@@ -488,7 +488,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="m-0">&copy; <a href="#">Domain</a>. All Rights Reserved. Designed and Developed by <a href="https://www.linkedin.com/in/haniya-konain-210882251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Haniya Konain</a>
+                    <p class="m-0">&copy; <a href="https://www.godaddy.com/en-in">Domain</a>. All Rights Reserved. Designed and Developed by <a href="https://www.linkedin.com/in/haniya-konain-210882251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Haniya Konain</a>
                     </p>
                 </div>
             </div>
