--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                         <a href="product.html" class="nav-item nav-link">Product</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
+                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">cocoa</span>bell's</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
                         <a href="service.html" class="nav-item nav-link">Service</a>
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="m-0">&copy; <a href="#">Domain</a>. All Rights Reserved. Designed and Developed by <a href="https://www.linkedin.com/in/haniya-konain-210882251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Haniya Konain</a>
+                    <p class="m-0">&copy; <a href="https://www.godaddy.com/en-in">Domain</a>. All Rights Reserved. Designed and Developed by <a href="https://www.linkedin.com/in/haniya-konain-210882251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Haniya Konain</a>
                     </p>
                 </div>
             </div>
