--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                         <a href="product.html" class="nav-item nav-link">Product</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">cocoa</span>bell's</h1>
+                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
                         <a href="service.html" class="nav-item nav-link">Service</a>
