--- a/cart.html
+++ b/cart.html
@@ -1,16 +1,181 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-    <head>   
-          <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">     <title>Shopping Cart</title>   
-          <link rel="stylesheet" href="css/style.css"> 
-        </head>
-    
-         <body>   
-              <div class="container">         <h1>Shopping Cart</h1>       
-                  <div id="cart-items">             <!-- Cart items will be dynamically populated here -->     
-                       </div>      
-                          <div id="cart-total">             <!-- Total will be displayed here -->         </div>         <div>             <a href="checkout.html" class="btn btn-primary">Proceed to Checkout</a>         </div>     </div>     <script src="cart.js"></script> 
-       
-    </body> 
-    </html> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Cocoa bell's - Chocolate Shop Website</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+   
+
+    <!-- Favicon -->
+    <link href="img/air12.jpg" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-primary py-3 d-none d-md-block">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
+                    <div class="d-inline-flex align-items-center">
+                        <a class="text-white pr-3" href="">Explore</a>
+                        <span class="text-white">|</span>
+                        <a class="text-white px-3" href="">The</a>
+                        <span class="text-white">|</span>
+                        <a class="text-white pl-3" href="">Happiness</a>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center text-lg-right">
+                    <div class="d-inline-flex align-items-center">
+                        <a class="text-white px-3" href="https://www.facebook.com/share/3uWHRp6JKtBA3Msg/?mibextid=qi2Omg">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://x.com/cocoa_bells0?t=ml_snDo1qxSEKJoyTlM1XQ&s=09">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Topbar End -->
+
+
+    <!-- Navbar Start -->
+    <div class="container-fluid position-relative nav-bar p-0">
+        <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
+            <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
+                <a href="index.html" class="navbar-brand d-block d-lg-none">
+                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
+                </a>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                    <div class="navbar-nav ml-auto py-0">
+                       <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="service.html" class="nav-item nav-link">Service</a>
+                    </div>
+                    <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
+                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
+                    </a>
+                    <div class="navbar-nav mr-auto py-0">
+                        <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                        <a href="product.html" class="nav-item nav-link">Product</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- Navbar End -->
+
+
+    <!-- Header Start -->
+    <div class="jumbotron jumbotron-fluid page-header" style="margin-bottom: 90px;">
+        <div class="container text-center py-5">
+            <h1 class="text-white display-3 mt-lg-5">Shopping Cart</h1>
+            <div class="d-inline-flex align-items-center text-white">
+                <p class="m-0"><a class="text-white" href="">Home</a></p>
+                <i class="fa fa-circle px-3"></i>
+                <p class="m-0">Product</p>
+            </div>
+        </div>
+    </div>
+    <!-- Header End -->
+<div class="container">
+    <h3>Your Cart Contain's</h3>
+    <ul id="cart-items"></ul>
+    <p>Total : RS/- <span id="cart-total">0.00</span></p>
+      <a href="checkout.html" class="btn btn-primary">Proceed to Checkout</a>
+</div>
+
+    <!-- Footer Start -->
+    <div class="container-fluid footer bg-light py-5" style="margin-top: 90px;">
+        <div class="container text-center py-5">
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <a href="index.html" class="navbar-brand m-0">
+                        <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
+                    </a>
+                </div>
+                <div class="col-12 mb-4">
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://x.com/cocoa_bells0?t=ml_snDo1qxSEKJoyTlM1XQ&s=09"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/share/3uWHRp6JKtBA3Msg/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-secondary btn-social" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="col-12 mt-2 mb-4">
+                    <div class="row">
+                        <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
+                            <h5 class="font-weight-bold mb-2">Get In Touch</h5>
+                            <p class="mb-2">Hyderabad, India</p>
+                            <p class="mb-0">+91 87903 19365</p>
+                        </div>
+                        <div class="col-sm-6 text-center text-sm-left">
+                            <h5 class="font-weight-bold mb-2">Opening Hours</h5>
+                            <p class="mb-2">Mon – Sat, 8AM – 5PM</p>
+                            <p class="mb-0">Sunday: Closed</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <p class="m-0">&copy; <a href="https://www.godaddy.com/en-in">Domain</a>. All Rights Reserved. Designed and Developed by <a href="https://www.linkedin.com/in/haniya-konain-210882251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Haniya Konain</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
+
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-secondary px-2 back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+    <!-- Contact Javascript File -->
+    <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.js"></script>
+
+    <!-- Template Javascript -->
+     <script src="js/app.js"></script>
+     <script src="js/mailer.js"></script>
+     <script src="js/cart.js"></script>
+     <script src="js/coupon.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', initializeCart);
+    </script>
+</body>
+</html>
+
+
