--- a/shipping.html
+++ b/shipping.html
@@ -24,8 +24,22 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
- 
-
+ <style>
+        .shipping-form {
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .form-group {
+            margin-bottom: 1rem;
+        }
+        @media (max-width: 576px) {
+            .shipping-form {
+                padding: 10px;
+            }
+        }
+    </style>
+</head>
 
 <body>
     <!-- Topbar Start -->
@@ -75,16 +89,16 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
+                      <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="product.html" class="nav-item nav-link active">Product</a>
+                        <a href="service.html" class="nav-item nav-link">Service</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
                         <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                        <a href="product.html" class="nav-item nav-link">Product</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
@@ -109,40 +123,109 @@
 
    
     <div class="container">
-        <h1>Shipping Details</h1>
+         <div class="row justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6">
+                <div class="shipping-form">
+        <h1>Shipping Details</h1> 
         <form action="payment.html">
+            <br>
             <div>
-                <label for="full-name">Full Name:</label>
+                <label for="full-name">Full Name:</label><br>
                 <input type="text" id="full-name" name="full-name" required>
-            </div>
+            </div> <br> 
             <div>
-                <label for="address">Address:</label>
+                <label for="address">Address:</label><br>
                 <input type="text" id="address" name="address" required>
-            </div>
+            </div><br>
             <div>
-                <label for="city">City:</label>
+                <label for="city">City:</label><br>
                 <input type="text" id="city" name="city" required>
-            </div>
+            </div><br>
             <div>
-                <label for="state">State:</label>
+                <label for="state">State:</label><br>
                 <input type="text" id="state" name="state" required>
-            </div>
+            </div><br>
             <div>
-                <label for="zip">ZIP Code:</label>
+                <label for="zip">ZIP Code:</label><br>
                 <input type="text" id="zip" name="zip" required>
-            </div>
+            </div><br>
             <div>
-                <label for="phone">Phone Number:</label>
+                <label for="phone">Phone Number:</label><br>
                 <input type="text" id="phone" name="phone" required>
             </div>
             <div>
+                <br>
                 <button type="submit" class="btn btn-primary">Proceed to Payment</button>
             </div>
         </form>
+        </div>
+       </div>
+        </div>
+    </div> 
+
+     
+    <!-- Footer Start -->
+    <div class="container-fluid footer bg-light py-5" style="margin-top: 90px;">
+        <div class="container text-center py-5">
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <a href="index.html" class="navbar-brand m-0">
+                        <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">Cocoa</span>bell's</h1>
+                    </a>
+                </div>
+                <div class="col-12 mb-4">
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://x.com/cocoa_bells0?t=ml_snDo1qxSEKJoyTlM1XQ&s=09"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/share/3uWHRp6JKtBA3Msg/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-secondary btn-social" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="col-12 mt-2 mb-4">
+                    <div class="row">
+                        <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
+                            <h5 class="font-weight-bold mb-2">Get In Touch</h5>
+                            <p class="mb-2">Hyderabad, India</p>
+                            <p class="mb-0">+91 87903 19365</p>
+                        </div>
+                        <div class="col-sm-6 text-center text-sm-left">
+                            <h5 class="font-weight-bold mb-2">Opening Hours</h5>
+                            <p class="mb-2">Mon – Sat, 8AM – 5PM</p>
+                            <p class="mb-0">Sunday: Closed</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <p class="m-0">&copy; <a href="https://www.godaddy.com/en-in">Domain</a>. All Rights Reserved. Designed and Developed by <a href="https://www.linkedin.com/in/haniya-konain-210882251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Haniya Konain</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-      <script src="js/cart.js"></script>
+    <!-- Footer End -->
+
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-secondary px-2 back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+    <!-- Contact Javascript File -->
+    <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.js"></script>
+
+    
      <script src="js/coupon.js"></script>
     <script src="js/main.js"></script>
-</body>
-</html>
+    <script src="cart.js"></script>
+<script src="js/app.js"></script>
+     <script src="js/mailer.js"></script>
 
+</body>
+</html>   
